* It is no longer required to have a text field, for save the edited element.
* Improve the behavior with the arrow keys (depending to the current selection  (nothing / one / several).
* Context menu display only enabled actions.
* Add new feature -> alignment.
* Alignment of text field can be edited.

* Diagram editor : 
* Conductors can now be drawn with two colors.
* The code for the resize handles has been almost completely redesigned.
* Dissociate fonts policy and size for independent text item and for summarry pages (foliolist), add a 2 button in config page for open Qfontdialog widget and choose policy for independent text item
Possiblility to overide defaut settings by adding in QElectroTech.conf
* Basic shape add new CustomDashLine style with Dash Pattern (<< 10 << 10 );
* It is now possible to add a text field to an element directly from the diagram.
* Element text item with are now converted to dynamic element text item.
* Element editor, part text can't be edited directly.
* User can export / import the configuration of the texts and texts group of an element.
* Context menu display only enabled actions.
* Add new action in the context menu, multiple paste, check box for autonum the pasted element.
* Multipaste -> improve the conductor autonum, conductors are numerated from top to bottom, and left to right.
* Text of conductor can be placed at top/bottom/left/right of conductor, and text never overlaps the conductor.
* Function for search conductor at the same potential.
When the search function is searching in a terminal element, they search only for the first terminal found, no matter if the terminal element have more than two terminals.
So the list of conductors at the same potential is missing some conductors.
This commit fix it, now the search function search for every terminals of a terminal element.
* Add new feature -> alignment.
* Alignment of text field can be edited.
* Add new context menu action "group the selected texts".